[Home]

Summary:ASTERISK-27182: bridge: Crash when mapping streams
Reporter:Joshua C. Colp (jcolp)Labels:
Date Opened:2017-08-06 11:16:49Date Closed:2017-08-14 08:25:28
Priority:MajorRegression?Yes
Status:Closed/CompleteComponents:Core/Bridging
Versions:15.0.0 Frequency of
Occurrence
Related
Issues:
Environment:Attachments:
Description:The testsuite uncovered a problem when mapping streams:
https://jenkins2.asterisk.org/job/gate-ast-master-pjsip/266/
It seems to have crashed. Initial investigation shows that the channel may not be locked, so access to the stream topology is not safe. Whether this is true or not should be investigated and lock held as appropriate.
Comments: